# Nucleus

./: .eslintrc.json  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTEXT.md  CONTRIBUTING.md  CREATE_PR_COMMANDS.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-SUMMARY.md  DESIGN-DECISIONS.md  FASE_6_1_IMPLEMENTATIE_START.md  FASE_6_1_MODULE_REGISTRY_COMPLETE.md  FASE_6_2_ENGINE_ACL_PLAN.md  FASE_6_2_IMPLEMENTATIE_START.md  FASE_6_2_UAL_ACL_COMPLETE.md  FASE_6_3_IMPLEMENTATIE_START.md  FASE_6_3_STORAGE_COMPLETE.md  FINAL_DEPLOYMENT_SUMMARY.md  GECORRIGEERDE_MONOREPO_ANALYSE.md  GITHUB_RELEASE_COMMANDS.md  GITHUB_RELEASE_v0.1.0-beta.md  GITHUB_RELEASE_v0.1.1-beta.md  IMPLEMENTATION-PLAN.md  LICENSE  MONOREPO_ANALYSE.md  NPM_PUBLISH.md  NUCLEUS_FASE_6_STATUS_ANALYSE.md  ONTBREKENDE_BESTANDEN_ANALYSE.md  PRODUCTION-READINESS.md  PUBLISHING.md  PULL_REQUEST_BETA_TO_MAIN.md  README.md  RELEASE_v0.1.1-beta.md  SCOPE-nucleus-v0.1.0-beta.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: FUNDING.yml  pull_request_template.md
crates/: Cargo.toml
crates/nucleus-core/: Cargo.toml
crates/nucleus-core/src/: anchor.rs  context.rs  error.rs  hash.rs  hash_chain.rs  lib.rs  record.rs
crates/nucleus-core/src/module/: asset.rs  config.rs  context.rs  error.rs  mod.rs  proof.rs  trait_def.rs
crates/nucleus-core/src/serialization/: canonical.rs  mod.rs
crates/nucleus-core/tests/: core_e2e.rs
crates/nucleus-engine/: Cargo.toml
crates/nucleus-engine/src/: config.rs  engine.rs  error.rs  lib.rs  module_registry.rs  query.rs  state.rs
crates/nucleus-engine/src/acl/: error.rs  memory.rs  mod.rs  trait_def.rs  types.rs
crates/nucleus-engine/src/storage/: error.rs  mod.rs  sqlite.rs
crates/nucleus-engine/src/storage/migrations/: 001_create_entries.sql
crates/nucleus-engine/tests/: acl_integration.rs  engine_e2e.rs  integration.rs  storage_integration.rs
crates/nucleus-wasm/: .gitignore  Cargo.toml  build.sh  package.json
crates/nucleus-wasm/src/: error.rs  ledger.rs  lib.rs  record.rs
crates/nucleus-wasm/tests/: README.md  wasm_e2e.rs  wasm_unit.rs
crates/nucleus-wasm/types/: index.d.ts
examples/: basic-usage.ts
ledger/: FRAMEWORK_OPTIMIZATIONS_AND_EXTENSIONS.md  INTEGRITY_IMPLEMENTATION_PLAN.md  INTEGRITY_IMPROVEMENTS.md  LEDGER_FOLDER_ANALYSE.md  LEDGER_FRAMEWORK_CONNECTOR_ANALYSIS.md  LEDGER_FRAMEWORK_RUST_MIGRATION_ANALYSE.md  LEDGER_OPTIMIZATION_ANALYSIS.md  LEDGER_RUST_STRUCTURE_CONTEXT.md  LEDGER_RUST_STRUCTURE_OPTIMALISATIE.md  LEDGER_UITGEBREIDE_ANALYSE.md  MESH_NETWORK_IMPLEMENTATION_PLAN.md  MESH_PROTOCOL_MODULE_VS_PLUGIN_ANALYSIS.md  MESH_PROTOCOL_PLUGIN_ANALYSIS.md  NUCLEUS_ACCESS_CONTROL_ANALYSE.md  NUCLEUS_ENGINE_ARCHITECTUUR.md  NUCLEUS_FASE_1_DETAILLEPLAN.md  NUCLEUS_FASE_2_DETAILLEPLAN.md  NUCLEUS_FASE_3_DETAILLEPLAN.md  NUCLEUS_FASE_4_DETAILLEPLAN.md  NUCLEUS_FASE_5_DETAILLEPLAN.md  NUCLEUS_FASE_6_1_ROADMAP.md  NUCLEUS_FASE_6_2_ROADMAP.md  NUCLEUS_FASE_6_3_ROADMAP.md  NUCLEUS_FASE_6_4_ROADMAP.md  (+14 more)
(+202 files in other folders)
