[workspace]
members = [
    "nucleus-core",
    "nucleus-engine",
    "nucleus-wasm",
    # "nucleus-server",  # TODO: Later
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Onoal Team"]
license = "MIT"
repository = "https://github.com/onoal/nucleus"
description = "Nucleus Engine - Canonical ledger engine"

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

[workspace.dev-dependencies]
criterion = "0.5"

