[package]
name = "nucleus-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nucleus Engine - Runtime wrapper for nucleus-core"

[dependencies]
nucleus-core = { path = "../nucleus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "nucleus_engine"
path = "src/lib.rs"

