[package]
name = "nucleus-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nucleus Engine - Runtime wrapper for nucleus-core"

[dependencies]
nucleus-core = { path = "../nucleus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "nucleus_engine"
path = "src/lib.rs"

