[package]
name = "nucleus-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nucleus Engine WASM bindings"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nucleus_wasm"
path = "src/lib.rs"

[dependencies]
nucleus-engine = { path = "../nucleus-engine" }
nucleus-core = { path = "../nucleus-core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization

